refactor: Add initial user seed config to .env
Add initial admin config variable to .env.example
Add initial user config variable to .env.example

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ADMIN_EMAIL_SEED=testadmin@email.com
+ADMIN_PASS_SEED=123456
+USER_EMAIL_SEED=testuser@email.com
+USER_PASS_SEED=123456
