--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,4 @@ ADMIN_EMAIL_SEED=testadmin@email.com
 ADMIN_PASS_SEED=123456
 USER_EMAIL_SEED=testuser@email.com
 USER_PASS_SEED=123456
+DEFAULT_AUTHOR="Marian"
