chore: Copy defaults from .env to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Marian
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:1CZBH4AOHH2Ef/cHReYXhWs2JzLYzcXFN/cax0PPA2Y=
 APP_DEBUG=true
 APP_URL=http://localhost
 
