--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "11.1.0"
+    },
+    "dependencies": {
+        "node-sass": "^6.0.0",
+        "tinymce": "^5.8.1"
     }
 }
