--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
+        "srmklive/paypal": "~3.0",
         "stevebauman/location": "^6.1"
     },
     "require-dev": {
