feat: add minimal mercadopago integration

--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,11 @@ PAYPAL_SANDBOX_CLIENT_SECRET=
 #PayPal Setting & API Credentials - live
 #PAYPAL_LIVE_CLIENT_ID=
 #PAYPAL_LIVE_CLIENT_SECRET=
+
+
+#Mercado Pago API Mode
+# Values: sandbox or prod (Default: prod)
+MERCADOPAGO_MODE=sandbox
+
+MERCADOPAGO_SANDBOX_PUBLIC_KEY=
+MERCADOPAGO_SANDBOX_TOKEN=
