--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,14 @@ MERCADOPAGO_MODE=sandbox
 
 MERCADOPAGO_SANDBOX_PUBLIC_KEY=
 MERCADOPAGO_SANDBOX_TOKEN=
+
+# Doppler API
+DOPPLER_API_KEY=
+DOPPLER_ACCOUNT_NAME=
+DOPPLER_CONTACTO_LIST_ID=
+DOPPLER_NEWSLETTER_LIST_ID=
+DOPPLER_RECURSOS_LIST_ID=
+DOPPLER_TEST_COMENZAR_LIST_ID=
+DOPPLER_TEST_MEJORAR_LIST_ID=
+DOPPLER_TEST_CRECER_LIST_ID=
+DOPPLER_SERVICIOS_LIST_ID=
