feat: Send mail to admin on contact form query

--- a/.env.example
+++ b/.env.example
@@ -87,3 +87,6 @@ DOPPLER_TEST_COMENZAR_LIST_ID=
 DOPPLER_TEST_MEJORAR_LIST_ID=
 DOPPLER_TEST_CRECER_LIST_ID=
 DOPPLER_SERVICIOS_LIST_ID=
+
+# Mail para redirigir consultas
+#MAIL_CONSULTAS=
