--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "mercadopago/dx-php": "2.3.0",
+        "spatie/laravel-honeypot": "^3.0",
         "srmklive/paypal": "~3.0",
         "stevebauman/location": "^6.1"
     },
