--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.4",
         "biscolab/laravel-recaptcha": "^5.2",
         "econea/nusoap": "^0.9.11",
         "fideloper/proxy": "^4.4",
@@ -20,6 +20,7 @@
         "stevebauman/location": "^6.1"
     },
     "require-dev": {
+        "bangnokia/laravel-serve-livereload": "^1.1",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
