--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.4",
+        "php": "^7.3|^8.0",
         "biscolab/laravel-recaptcha": "^5.2",
         "econea/nusoap": "^0.9.11",
         "fideloper/proxy": "^4.4",
